--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "react-bootify-theme",
+	"name": "react-bootify-themes",
 	"version": "0.0.14",
-	"description": "react-bootify-theme",
+	"description": "react-bootify-themes",
 	"main": "lib/index.js",
 	"scripts": {
 		"start": "webpack-dev-server --mode development",
@@ -11,7 +11,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/meg768/react-bootify-theme.git"
+		"url": "git+https://github.com/meg768/react-bootify-themes.git"
 	},
 	"author": "",
 	"license": "ISC",
@@ -20,9 +20,9 @@
 		"react-dom": "^16.0.0"
 	},
 	"bugs": {
-		"url": "https://github.com/meg768/react-bootify-theme/issues"
+		"url": "https://github.com/meg768/react-bootify-themes/issues"
 	},
-	"homepage": "https://github.com/meg768/react-bootify-theme#readme",
+	"homepage": "https://github.com/meg768/react-bootify-themes#readme",
 	"devDependencies": {
 		"@babel/cli": "^7.1.2",
 		"@babel/core": "^7.1.2",
