--- a/package.json
+++ b/package.json
@@ -30,21 +30,15 @@
 		"@babel/plugin-proposal-class-properties": "^7.1.0",
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
-		"babel-core": "^6.26.3",
 		"babel-loader": "^8.0.4",
-		"bootstrap-css-only": "^4.1.1",
-		"bootswatch": "^4.1.3",
 		"css-loader": "^1.0.0",
-		"gh-pages": "^2.0.1",
-		"html-webpack-plugin": "^3.2.0",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
-		"style-loader": "^0.23.0",
-		"webpack": "^4.20.2",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.9"
+		"style-loader": "^0.23.0"
 	},
 	"dependencies": {
+		"bootstrap-css-only": "^4.1.1",
+		"bootswatch": "^4.1.3",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.6.2"
 	}
